--- a/html/finibus/finbus_template/index.html
+++ b/html/finibus/finbus_template/index.html
@@ -72,43 +72,16 @@
               <ul>
                 <li class="has-child active">
                   <a href="index.html">Home</a>
-                  <i class="bi bi-chevron-down"></i>
-                  <ul class="sub-menu">
-                    <li><a href="index.html">Home 01</a></li>
-                    <li><a href="index2.html">Home 02</a></li>
-                    <li><a href="index3.html">Home 03</a></li>
-                  </ul>
                 </li>
                 <li><a href="about.html">About us</a></li>
                 <li class="has-child">
                   <a href="services.html">Services</a>
-                  <i class="bi bi-chevron-down"></i>
-                  <ul class="sub-menu">
-                    <li><a href="services.html">Service</a></li>
-                    <li>
-                      <a href="service-details.html">Service Details</a>
-                    </li>
-                  </ul>
                 </li>
                 <li class="has-child">
                   <a href="project.html">Projects</a>
-                  <i class="bi bi-chevron-down"></i>
-                  <ul class="sub-menu">
-                    <li><a href="project.html">Project</a></li>
-                    <li><a href="project2.html">Project masonry</a></li>
-                    <li>
-                      <a href="project-details.html">Project Details</a>
-                    </li>
-                  </ul>
                 </li>
                 <li class="has-child">
                   <a href="blog.html">Blogs</a>
-                  <i class="bi bi-chevron-down"></i>
-                  <ul class="sub-menu">
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="blog2.html">Blog standard</a></li>
-                    <li><a href="blog_details.html">Blog Details</a></li>
-                  </ul>
                 </li>
 
                 <li><a href="contact.html">Contact us</a></li>
@@ -173,6 +146,13 @@
                           nec dui luctus, pellentesque lacus sed, mollis leo.
                         </p>
 
+                        <!-- Scroll -->
+                        <div class="scroll__down">
+                          <span class="scroll__mouse">
+                            <span class="scroll__wheel"></span>
+                          </span>
+                        </div>
+
                         <div class="slider-num">
                           <span>01</span>
                         </div>
@@ -209,6 +189,13 @@
                           nec dui luctus, pellentesque lacus sed, mollis leo.
                         </p>
 
+                        <!-- Scroll -->
+                        <div class="scroll__down">
+                          <span class="scroll__mouse">
+                            <span class="scroll__wheel"></span>
+                          </span>
+                        </div>
+
                         <div class="slider-num">
                           <span>02</span>
                         </div>
@@ -243,7 +230,15 @@
                           eros eget fringilla an Duis a orci nunc. Suspendisse
                           ac convallis sapien, quis commodosani libero. Donec
                           nec dui luctus, pellentesque lacus sed, mollis leo.
+
                         </p>
+
+                        <!-- Scroll -->
+                        <div class="scroll__down">
+                          <a href="./error.html"><span class="scroll__mouse">
+                              <span class="scroll__wheel"></span>
+                            </span></a>
+                        </div>
 
                         <div class="slider-num">
                           <span>03</span>
@@ -317,7 +312,7 @@
                     <i><img src="assets/img/icons/service-icon-2.png" alt="" /></i>
                   </div>
                   <div class="service-content">
-                    <h4>App design</h4>
+                    <h4>custom web development</h4>
                     <p>
                       Maecenas ut est in ante imperdiet laoreet eu quis
                       vehicula justo elit Phasellus Door
@@ -336,7 +331,7 @@
                     <i><img src="assets/img/icons/service-icon-3.png" alt="" /></i>
                   </div>
                   <div class="service-content">
-                    <h4>Developing</h4>
+                    <h4>SAAS</h4>
                     <p>
                       Etiam eu ullamcorper ipsum. Pellentesque eu ipsum luctus
                       libero euismod
@@ -355,7 +350,7 @@
                     <i><img src="assets/img/icons/service-icon-4.png" alt="" /></i>
                   </div>
                   <div class="service-content">
-                    <h4>Graphic design</h4>
+                    <h4>Research and Development</h4>
                     <p>
                       Quisque in massa nunc. Etiam blandit tortor nisl, auctor
                       vulputate felis convallis at.
