--- a/html/finibus/finbus_template/index.html
+++ b/html/finibus/finbus_template/index.html
@@ -147,11 +147,13 @@
                         </p>
 
                         <!-- Scroll -->
-                        <div class="scroll__down">
-                          <span class="scroll__mouse">
-                            <span class="scroll__wheel"></span>
-                          </span>
-                        </div>
+                        <a href="#our-services" class=".nohover">
+                          <div class="scroll__down">
+                            <span class="scroll__mouse">
+                              <span class="scroll__wheel"></span>
+                            </span>
+                          </div>
+                        </a>
 
                         <div class="slider-num">
                           <span>01</span>
@@ -190,11 +192,13 @@
                         </p>
 
                         <!-- Scroll -->
-                        <div class="scroll__down">
-                          <span class="scroll__mouse">
-                            <span class="scroll__wheel"></span>
-                          </span>
-                        </div>
+                        <a href="#our-services" class=".nohover">
+                          <div class="scroll__down">
+                            <span class="scroll__mouse">
+                              <span class="scroll__wheel"></span>
+                            </span>
+                          </div>
+                        </a>
 
                         <div class="slider-num">
                           <span>02</span>
@@ -234,11 +238,13 @@
                         </p>
 
                         <!-- Scroll -->
-                        <div class="scroll__down">
-                          <a href="./error.html"><span class="scroll__mouse">
+                        <a href="#our-services" class=".nohover">
+                          <div class="scroll__down">
+                            <span class="scroll__mouse">
                               <span class="scroll__wheel"></span>
-                            </span></a>
-                        </div>
+                            </span>
+                          </div>
+                        </a>
 
                         <div class="slider-num">
                           <span>03</span>
@@ -267,7 +273,7 @@
     <!-- Hero Section end -->
 
     <!-- Service Section -->
-    <section class="service-area sec-pad">
+    <section class="service-area sec-pad" id="our-services">
       <div class="container">
         <div class="row">
 
