--- a/html/finibus/finbus_template/index.html
+++ b/html/finibus/finbus_template/index.html
@@ -281,7 +281,7 @@
           <div class="col-md-12 col-lg-4 col-xl-4">
             <div class="title">
               <span>what we do</span>
-              <h2>we perform to make our client happy.</h2>
+              <h2>we perform to make our clients happy.</h2>
               <div class="cmn-btn">
                 <a href="services.html">view all services</a>
               </div>
@@ -374,7 +374,7 @@
     </section>
     <!-- Service Section end -->
 
-
+    <!-- About Section -->
     <section class="about-area sec-mar">
       <div class="container">
         <div class="row">
@@ -480,7 +480,9 @@
         </div>
       </div>
     </section>
+    <!-- About Section end -->
 
+    <!-- Partner Section -->
     <section class="our-partner">
       <div class="container-fluid g-0 overflow-hidden">
         <div class="row align-items-center g-0">
@@ -594,123 +596,10 @@
         </div>
       </div>
     </section>
+    <!-- Partner Section end -->
 
-    <div class="portfolio-area sec-mar-top">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-lg-7 col-xl-5">
-            <div class="title black">
-              <span>Case Study</span>
-              <h2>A diversified resilient portfolio.</h2>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="swiper portfolio-slider">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="single-portfolio">
-              <div class="portfolio-data">
-                <a href="#"><img src="assets/img/portfolio/portfolio-1.jpg" alt="" /></a>
-              </div>
-              <div class="portfolio-inner">
-                <span>Template</span>
-                <h4>Creative Agency</h4>
-                <div class="portfolio-hover">
-                  <a href="project-details.html" class="case-btn">Case Study</a>
-                  <a data-lightbox="image1" href="assets/img/portfolio/portfolio-1.jpg"><i
-                      class="fas fa-search"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="single-portfolio">
-              <div class="portfolio-data">
-                <a href="#"><img src="assets/img/portfolio/portfolio-2.jpg" alt="" /></a>
-              </div>
-              <div class="portfolio-inner">
-                <span>UI Kit</span>
-                <h4>E-Shop Ecommerce</h4>
-                <div class="portfolio-hover">
-                  <a href="project-details.html" class="case-btn">Case Study</a>
-                  <a data-lightbox="image1" href="assets/img/portfolio/portfolio-2.jpg"><i
-                      class="fas fa-search"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="single-portfolio">
-              <div class="portfolio-data">
-                <a href="#"><img src="assets/img/portfolio/portfolio-3.jpg" alt="" /></a>
-              </div>
-              <div class="portfolio-inner">
-                <span>Software</span>
-                <h4>Desktop Mockup</h4>
-                <div class="portfolio-hover">
-                  <a href="project-details.html" class="case-btn">Case Study</a>
-                  <a data-lightbox="image1" href="assets/img/portfolio/portfolio-3.jpg"><i
-                      class="fas fa-search"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="single-portfolio">
-              <div class="portfolio-data">
-                <a href="#"><img src="assets/img/portfolio/portfolio-4.jpg" alt="" /></a>
-              </div>
-              <div class="portfolio-inner">
-                <span>Graphic</span>
-                <h4>Art Deco Cocktails</h4>
-                <div class="portfolio-hover">
-                  <a href="project-details.html" class="case-btn">Case Study</a>
-                  <a data-lightbox="image1" href="assets/img/portfolio/portfolio-4.jpg"><i
-                      class="fas fa-search"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="single-portfolio">
-              <div class="portfolio-data">
-                <a href="#"><img src="assets/img/portfolio/portfolio-5.jpg" alt="" /></a>
-              </div>
-              <div class="portfolio-inner">
-                <span>App</span>
-                <h4>Mobile Crypto Wallet</h4>
-                <div class="portfolio-hover">
-                  <a href="project-details.html" class="case-btn">Case Study</a>
-                  <a data-lightbox="image1" href="assets/img/portfolio/portfolio-5.jpg"><i
-                      class="fas fa-search"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="single-portfolio">
-              <div class="portfolio-data">
-                <a href="#"><img src="assets/img/portfolio/portfolio-3.jpg" alt="" /></a>
-              </div>
-              <div class="portfolio-inner">
-                <span>Template</span>
-                <h4>Creative Agency</h4>
-                <div class="portfolio-hover">
-                  <a href="project-details.html" class="case-btn">Case Study</a>
-                  <a data-lightbox="image1" href="assets/img/portfolio/portfolio-3.jpg"><i
-                      class="fas fa-search"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
-      </div>
-    </div>
 
+    <!-- Why Choose Us Section -->
     <section class="why-choose-us sec-mar">
       <div class="container">
         <div class="row">
@@ -765,7 +654,9 @@
         </div>
       </div>
     </section>
+    <!-- Why Choose Us Section end -->
 
+    <!-- Testimonial Section -->
     <section class="testimonial-area">
       <div class="container">
         <div class="row">
@@ -880,6 +771,8 @@
         </div>
       </div>
     </section>
+    <!-- Testimonial Section end -->
+
 
     <section class="latest-news sec-mar">
       <div class="container">
@@ -981,6 +874,8 @@
       </div>
     </section>
 
+
+    <!-- Footer -->
     <footer>
       <div class="container">
         <div class="row">
@@ -991,7 +886,7 @@
               </div>
               <address>
                 <h4>Office</h4>
-                <p>168/170, Avenue 01, Mirpur DOHS, Bangladesh</p>
+                <p>Suite #201 (2nd floor) Navana-DH Tower, Plot-6, Panthapath Lane, Karwan Bazar Dhaka-1215</p>
               </address>
               <ul class="social-media-icons">
                 <li>
@@ -1014,13 +909,15 @@
               <h4>Our Services</h4>
               <ul class="footer-menu">
                 <li>
-                  <a href="service-details.html">Strategy & Research</a>
+                  <a href="service-details.html">Web Design</a>
                 </li>
-                <li><a href="service-details.html">Web Development</a></li>
-                <li><a href="service-details.html">Web Solution</a></li>
-                <li><a href="service-details.html">Digital Merketing</a></li>
-                <li><a href="service-details.html">App Design</a></li>
-                <li><a href="service-details.html">App Development</a></li>
+                <li><a href="service-details.html">Custom Web Development</a></li>
+                <li><a href="service-details.html">SAAS</a></li>
+                <li><a href="service-details.html">Research and Development</a></li>
+                <li><a href="service-details.html">UI/UX Design</a></li>
+                <li><a href="service-details.html">Graphics Designing</a></li>
+                <li><a href="service-details.html">Digital Marketing</a></li>
+
               </ul>
             </div>
           </div>
@@ -1045,8 +942,8 @@
                   <i class="fas fa-phone-alt"></i>
                 </div>
                 <div class="phone">
-                  <a href="tel:05661111985">+880 566 1111 985</a>
-                  <a href="tel:06571111576">+880 657 1111 576</a>
+                  <a href="tel:05661111985">+8802550134013</a>
+                  <!-- <a href="tel:06571111576">+880 657 1111 576</a> -->
                 </div>
               </div>
               <div class="office-mail">
@@ -1054,17 +951,17 @@
                   <i class="far fa-envelope"></i>
                 </div>
                 <div class="email">
-                  <a href="tell:info@example.com"><span class="__cf_email__"
-                      data-cfemail="81e8efe7eec1e4f9e0ecf1ede4afe2eeec">[email&#160;protected]</span></a>
-                  <a href="tell:info@support.com"><span class="__cf_email__"
-                      data-cfemail="ec85828a83ac9f999c9c839e98c28f8381">[email&#160;protected]</span></a>
+                  <a href="tell:info@example.com"><span class=""
+                      data-cfemail="81e8efe7eec1e4f9e0ecf1ede4afe2eeec">info@inflexionpointbd.com</span></a>
+                  <!-- <a href="tell:info@support.com"><span class="__cf_email__"
+                      data-cfemail="ec85828a83ac9f999c9c839e98c28f8381">[email&#160;protected]</span></a> -->
                 </div>
               </div>
               <div class="address">
                 <div class="address-icon">
                   <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <p>168/170, Avenue 01, Mirpur DOHS, Bangladesh</p>
+                <p>Suite #201 (2nd floor) Navana-DH Tower, Plot-6, Panthapath Lane, Karwan Bazar Dhaka-1215</p>
               </div>
             </div>
           </div>
@@ -1073,8 +970,8 @@
           <div class="row align-items-center">
             <div class="col-12 col-md-4 col-lg-4 col-xl-5">
               <div class="copy-txt">
-                <span>Copyright 2022 <b>Finibus</b> | Design By
-                  <a href="#">Egens Lab</a></span>
+                <span>Copyright 2022 <b>Inflexionpoint Technologies (Bd) Ltd</b> | All Rights Reserved
+                  <a href="#"></a></span>
               </div>
             </div>
             <div class="col-12 col-md-8 col-lg-8 col-xl-7">
@@ -1089,6 +986,8 @@
         </div>
       </div>
     </footer>
+    <!-- Footer end -->
+
 
     <div class="scroll-top">
       <span>Top<i class="bi bi-arrow-up"></i></span>
