--- a/html/finibus/finbus_template/index.html
+++ b/html/finibus/finbus_template/index.html
@@ -302,8 +302,8 @@
                   <div class="service-content">
                     <h4>web design</h4>
                     <p>
-                      Fusce ornare mauris nisi, id fringilla turpis vehicula
-                      justo lectus, ultricies nec sem
+                      When our designers complete their work, our development team jumps in to take things further and
+                      carry out the best development solutions.
                     </p>
 
                   </div>
@@ -320,8 +320,8 @@
                   <div class="service-content">
                     <h4>custom web development</h4>
                     <p>
-                      Maecenas ut est in ante imperdiet laoreet eu quis
-                      vehicula justo elit Phasellus Door
+                      Our developers customize appearance & behavior of front-end as well as proficient back-end
+                      programming for dynamic & efficient web solution.
                     </p>
 
                   </div>
@@ -339,8 +339,8 @@
                   <div class="service-content">
                     <h4>SAAS</h4>
                     <p>
-                      Etiam eu ullamcorper ipsum. Pellentesque eu ipsum luctus
-                      libero euismod
+                      we provide SAAS which allows users to connect to and use cloud-based apps
+                      over the Internet
                     </p>
 
                   </div>
@@ -358,8 +358,8 @@
                   <div class="service-content">
                     <h4>Research and Development</h4>
                     <p>
-                      Quisque in massa nunc. Etiam blandit tortor nisl, auctor
-                      vulputate felis convallis at.
+                      We push value-centered IoT solutions at Inflexionpoint Technologies (BD) Ltd., and we set up
+                      multi-level data pipelines for it.
                     </p>
 
                   </div>
