--- a/html/finibus/finbus_template/services.html
+++ b/html/finibus/finbus_template/services.html
@@ -197,7 +197,8 @@
                                     </div>
                                     <div class="service-content">
                                         <h4>SAAS</h4>
-                                        <p>interger purus adio, placerat ni in, ullamcorper nec dolor.</p>
+                                        <p>we provide SAAS which allows users to connect to and use cloud-based apps
+                                            over the Internet</p>
                                         <a href="service-details.html">read more<i><img
                                                     src="assets/img/icons/arrow-circle.png" alt=""></i></a>
                                     </div>
@@ -489,7 +490,8 @@
                             </div>
                             <address>
                                 <h4>Office</h4>
-                                <p>168/170, Avenue 01, Mirpur DOHS, Bangladesh</p>
+                                <p>Suite #201 (2nd floor) Navana-DH Tower, Plot-6, Panthapath Lane, Karwan Bazar
+                                    Dhaka-1215</p>
                             </address>
                             <ul class="social-media-icons">
                                 <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
@@ -503,12 +505,14 @@
                         <div class="footer-widget">
                             <h4>Our Services</h4>
                             <ul class="footer-menu">
-                                <li><a href="service-details.html">Strategy & Research</a></li>
-                                <li><a href="service-details.html">Web Development</a></li>
-                                <li><a href="service-details.html">Web Solution</a></li>
-                                <li><a href="service-details.html">Digital Merketing</a></li>
-                                <li><a href="service-details.html">App Design</a></li>
-                                <li><a href="service-details.html">App Development</a></li>
+                                <li><a href="service-details.html">Web Design</a></li>
+                                <li><a href="service-details.html">Custom Web Development</a></li>
+                                <li><a href="service-details.html">SAAS</a></li>
+                                <li><a href="service-details.html">Research and Development</a></li>
+                                <li><a href="service-details.html">UI/UX Design</a></li>
+                                <li><a href="service-details.html">Graphics Designing</a></li>
+                                <li><a href="service-details.html">Digital Marketing</a></li>
+
                             </ul>
                         </div>
                     </div>
@@ -533,8 +537,8 @@
                                     <i class="fas fa-phone-alt"></i>
                                 </div>
                                 <div class="phone">
-                                    <a href="tel:05661111985">+880 566 1111 985</a>
-                                    <a href="tel:06571111576">+880 657 1111 576</a>
+                                    <a href="tel:05661111985">+8802550134013</a>
+                                    <!-- <a href="tel:06571111576">+880 657 1111 576</a> -->
                                 </div>
                             </div>
                             <div class="office-mail">
@@ -542,17 +546,18 @@
                                     <i class="far fa-envelope"></i>
                                 </div>
                                 <div class="email">
-                                    <a href="tell:info@example.com"><span class="__cf_email__"
-                                            data-cfemail="82ebece4edc2e7fae3eff2eee7ace1edef">[email&#160;protected]</span></a>
-                                    <a href="tell:info@support.com"><span class="__cf_email__"
-                                            data-cfemail="87eee9e1e8c7f4f2f7f7e8f5f3a9e4e8ea">[email&#160;protected]</span></a>
+                                    <a href="tell:info@example.com"><span class=""
+                                            data-cfemail="82ebece4edc2e7fae3eff2eee7ace1edef">info@inflexionpointbd.com</span></a>
+                                    <!-- <a href="tell:info@support.com"><span class="__cf_email__"
+                                            data-cfemail="87eee9e1e8c7f4f2f7f7e8f5f3a9e4e8ea">[email&#160;protected]</span></a> -->
                                 </div>
                             </div>
                             <div class="address">
                                 <div class="address-icon">
                                     <i class="fas fa-map-marker-alt"></i>
                                 </div>
-                                <p>168/170, Avenue 01, Mirpur DOHS, Bangladesh</p>
+                                <p>Suite #201 (2nd floor) Navana-DH Tower, Plot-6, Panthapath Lane, Karwan Bazar
+                                    Dhaka-1215</p>
                             </div>
                         </div>
                     </div>
