--- a/html/finibus/finbus_template/services.html
+++ b/html/finibus/finbus_template/services.html
@@ -30,7 +30,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Finibus - Software and Digital Agency HTML Template</title>
+    <title>Inflexionpoint Technologies Bd</title>
 </head>
 
 <body>
@@ -84,7 +84,7 @@
 
                                 </li>
                                 <li class="has-child">
-                                    <a href="blog.html">Blogs</a>
+                                    <a href="blog2.html">Blogs</a>
                                 </li>
 
                                 <li><a href="contact.html">Contact us</a></li>
@@ -479,7 +479,7 @@
             </div>
         </section>
 
-
+        <!-- Footer -->
         <footer>
             <div class="container">
                 <div class="row">
@@ -523,7 +523,7 @@
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="services.html">Services</a></li>
                                 <li><a href="project.html">Project</a></li>
-                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="blog2.html">Blog</a></li>
                                 <li><a href="contact.html">Career</a></li>
                                 <li><a href="services.html">Pricing Plan</a></li>
                             </ul>
@@ -566,7 +566,8 @@
                     <div class="row align-items-center">
                         <div class="col-12 col-md-4 col-lg-4 col-xl-5">
                             <div class="copy-txt">
-                                <span>Copyright 2022 <b>Finibus</b> | Design By <a href="#">Egens Lab</a></span>
+                                <span>Copyright 2022 <b>Inflexionpoint Technologies (Bd) Ltd</b> | All Rights Reserved
+                                    <a href="#"></a></span>
                             </div>
                         </div>
                         <div class="col-12 col-md-8 col-lg-8 col-xl-7">
@@ -581,7 +582,7 @@
                 </div>
             </div>
         </footer>
-
+        <!-- Footer end -->
 
         <div class="scroll-top">
             <span>Top<i class="bi bi-arrow-up"></i></span>
