--- a/html/finibus/finbus_template/contact.html
+++ b/html/finibus/finbus_template/contact.html
@@ -33,7 +33,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css?V=1.0.1">
 
-    <title>Finibus - Software and Digital Agency HTML Template</title>
+    <title>Inflexionpoint Technologies Bd</title>
 </head>
 
 <body>
@@ -93,7 +93,7 @@
 
                                 </li>
                                 <li class="has-child">
-                                    <a href="blog.html">Blogs</a>
+                                    <a href="blog2.html">Blogs</a>
 
                                 </li>
 
@@ -304,7 +304,7 @@
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="services.html">Services</a></li>
                                 <li><a href="project.html">Project</a></li>
-                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="blog2.html">Blog</a></li>
                                 <li><a href="contact.html">Career</a></li>
                                 <li><a href="services.html">Pricing Plan</a></li>
                             </ul>
@@ -347,7 +347,8 @@
                     <div class="row align-items-center">
                         <div class="col-12 col-md-4 col-lg-4 col-xl-5">
                             <div class="copy-txt">
-                                <span>Copyright 2022 <b>Finibus</b> | Design By <a href="#">Egens Lab</a></span>
+                                <span>Copyright 2022 <b>Inflexionpoint Technologies (Bd) Ltd</b> | All Rights Reserved
+                                    <a href="#"></a></span>
                             </div>
                         </div>
                         <div class="col-12 col-md-8 col-lg-8 col-xl-7">
