--- a/html/finibus/finbus_template/index.html
+++ b/html/finibus/finbus_template/index.html
@@ -53,6 +53,7 @@
   <div class="main">
     <header class="position_top">
       <div class="container-fluid">
+        <!-- Navbar -->
         <div class="row align-items-center">
 
           <!-- Logo -->
@@ -63,7 +64,7 @@
           </div>
           <!-- Logo end -->
 
-          <!-- Navbar -->
+          <!-- NavbarLinks -->
           <div class="col col-sm-5 col-md-6 col-lg-6 col-xl-8 text-end">
             <nav class="main-nav">
               <div class="mobile-menu-logo">
@@ -81,7 +82,7 @@
                   <a href="project.html">Projects</a>
                 </li>
                 <li class="has-child">
-                  <a href="blog.html">Blogs</a>
+                  <a href="blog2.html">Blogs</a>
                 </li>
 
                 <li><a href="contact.html">Contact us</a></li>
@@ -100,7 +101,7 @@
               </a>
             </div>
           </div>
-          <!-- Navbar end -->
+          <!-- NavLinks end -->
 
           <!-- Get quote -->
           <div class="col-12 col-sm-4 col-md-3 col-lg-3 col-xl-2 text-end">
@@ -113,6 +114,8 @@
           <!-- Get quote end -->
 
         </div>
+        <!-- Navbar end -->
+
       </div>
     </header>
 
@@ -908,9 +911,7 @@
             <div class="footer-widget">
               <h4>Our Services</h4>
               <ul class="footer-menu">
-                <li>
-                  <a href="service-details.html">Web Design</a>
-                </li>
+                <li><a href="service-details.html">Web Design</a></li>
                 <li><a href="service-details.html">Custom Web Development</a></li>
                 <li><a href="service-details.html">SAAS</a></li>
                 <li><a href="service-details.html">Research and Development</a></li>
@@ -928,7 +929,7 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="project.html">Project</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="blog2.html">Blog</a></li>
                 <li><a href="contact.html">Career</a></li>
                 <li><a href="services.html">Pricing Plan</a></li>
               </ul>
