--- a/html/finibus/finbus_template/project.html
+++ b/html/finibus/finbus_template/project.html
@@ -30,7 +30,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Finibus - Software and Digital Agency HTML Template</title>
+    <title>Inflexionpoint Technologies Bd</title>
 </head>
 
 <body>
@@ -90,7 +90,7 @@
 
                                 </li>
                                 <li class="has-child">
-                                    <a href="blog.html">Blogs</a>
+                                    <a href="blog2.html">Blogs</a>
 
                                 </li>
 
@@ -129,10 +129,10 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="breadcrumb-wrapper">
-                            <h1>Project</h1>
+                            <h1>Projects</h1>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li>Project</li>
+                                <li>Projects</li>
                             </ul>
                         </div>
                     </div>
@@ -394,7 +394,9 @@
                             </div>
                             <address>
                                 <h4>Office</h4>
-                                <p>168/170, Avenue 01, Mirpur DOHS, Bangladesh</p>
+                                <p>Suite #201 (2nd floor) Navana-DH Tower, Plot-6, Panthapath Lane, Karwan Bazar
+                                    Dhaka-1215</p>
+
                             </address>
                             <ul class="social-media-icons">
                                 <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
@@ -408,12 +410,13 @@
                         <div class="footer-widget">
                             <h4>Our Services</h4>
                             <ul class="footer-menu">
-                                <li><a href="service-details.html">Strategy & Research</a></li>
-                                <li><a href="service-details.html">Web Development</a></li>
-                                <li><a href="service-details.html">Web Solution</a></li>
-                                <li><a href="service-details.html">Digital Merketing</a></li>
-                                <li><a href="service-details.html">App Design</a></li>
-                                <li><a href="service-details.html">App Development</a></li>
+                                <li><a href="service-details.html">Web Design</a></li>
+                                <li><a href="service-details.html">Custom Web Development</a></li>
+                                <li><a href="service-details.html">SAAS</a></li>
+                                <li><a href="service-details.html">Research and Development</a></li>
+                                <li><a href="service-details.html">UI/UX Design</a></li>
+                                <li><a href="service-details.html">Graphics Designing</a></li>
+                                <li><a href="service-details.html">Digital Marketing</a></li>
                             </ul>
                         </div>
                     </div>
@@ -424,7 +427,7 @@
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="services.html">Services</a></li>
                                 <li><a href="project.html">Project</a></li>
-                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="blog2.html">Blog</a></li>
                                 <li><a href="contact.html">Career</a></li>
                                 <li><a href="services.html">Pricing Plan</a></li>
                             </ul>
@@ -438,8 +441,8 @@
                                     <i class="fas fa-phone-alt"></i>
                                 </div>
                                 <div class="phone">
-                                    <a href="tel:05661111985">+880 566 1111 985</a>
-                                    <a href="tel:06571111576">+880 657 1111 576</a>
+                                    <a href="tel:05661111985">+8802550134013</a>
+                                    <!-- <a href="tel:06571111576">+880 657 1111 576</a> -->
                                 </div>
                             </div>
                             <div class="office-mail">
@@ -447,17 +450,19 @@
                                     <i class="far fa-envelope"></i>
                                 </div>
                                 <div class="email">
-                                    <a href="tell:info@example.com"><span class="__cf_email__"
-                                            data-cfemail="9bf2f5fdf4dbfee3faf6ebf7feb5f8f4f6">[email&#160;protected]</span></a>
-                                    <a href="tell:info@support.com"><span class="__cf_email__"
-                                            data-cfemail="c2abaca4ad82b1b7b2b2adb0b6eca1adaf">[email&#160;protected]</span></a>
+                                    <a href="tell:info@example.com"><span class=""
+                                            data-cfemail="81e8efe7eec1e4f9e0ecf1ede4afe2eeec">info@inflexionpointbd.com</span></a>
+                                    <!-- <a href="tell:info@support.com"><span class="__cf_email__"
+                                            data-cfemail="c2abaca4ad82b1b7b2b2adb0b6eca1adaf">[email&#160;protected]</span></a> -->
                                 </div>
                             </div>
                             <div class="address">
                                 <div class="address-icon">
                                     <i class="fas fa-map-marker-alt"></i>
                                 </div>
-                                <p>168/170, Avenue 01, Mirpur DOHS, Bangladesh</p>
+                                <p>Suite #201 (2nd floor) Navana-DH Tower, Plot-6, Panthapath Lane, Karwan Bazar
+                                    Dhaka-1215</p>
+
                             </div>
                         </div>
                     </div>
@@ -466,7 +471,8 @@
                     <div class="row align-items-center">
                         <div class="col-12 col-md-4 col-lg-4 col-xl-5">
                             <div class="copy-txt">
-                                <span>Copyright 2022 <b>Finibus</b> | Design By <a href="#">Egens Lab</a></span>
+                                <span>Copyright 2022 <b>Inflexionpoint Technologies (Bd) Ltd</b> | All Rights Reserved
+                                    <a href="#"></a></span>
                             </div>
                         </div>
                         <div class="col-12 col-md-8 col-lg-8 col-xl-7">
